Fix Styles
Fix horizontal scroll on mobile styles

--- a/src/styles/style.pcss
+++ b/src/styles/style.pcss
@@ -139,6 +139,7 @@ img {
 section {
     padding-top: 4vh;
     padding-bottom: 4vh;
+    overflow: hidden;
 }
 
 /*---- HEADER -----*/
@@ -207,7 +208,7 @@ header {
 
         .bg-image {
             position: absolute;
-            width: 80%;
+            width: max-content;
             right: 0;
             top: 0;
             z-index: 0;
@@ -273,8 +274,8 @@ header {
 
     .bg-image {
         position: absolute;
-        width: 70%;
-        height: 100%;
+        width: max-content;
+        height: max-content;
         right: 0;
         top: 0;
         z-index: 0;
